<resources>
    <string name="app_name">StudyIn</string>
    <string name="calendarButton">calendar</string>
    <string name="resourcesButton">resources</string>
    <string name="aboutButton">about</string>
    <string name="logoPNG">logoPNG</string>
    <string name="aboutText">StudyIn is an app created by 3 fourth-year Computer Engineering students at Queen\'s University.
        It is designed to help students organize their time and manage their tasks.
        Simply add a new event into the calendar and the amount of time you wish to study, then StudyIn will automatically assign study time into your schedule.</string>
    <string name="title_activity_calendar_nav">CalendarNav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="addText">addText</string>
    <string name="editText">editText</string>
    <string name="solusText">solusText</string>
    <string name="listAssignText">listAssignText</string>
    <string name="Course">Course:</string>
    <string name="courseName"></string>
    <string name="titleText">Title:</string>
    <string name="titleInput"></string>
    <string name="dueDate">Due Date:</string>
    <string name="numHours"># of Hours:</string>
    <string name="timeDue">Time Due:</string>
    <string name="dateInput">Set Date</string>
    <string name="timeInput">Set Time</string>
    <string name="title_activity_solus_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">NetID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="addEventButton">Add Event</string>

    <string name="title_activity_test">Test</string>
    <string name="bedtimeTxt">Bedtime:</string>
    <string name="bedtimeButton">Set Time</string>
    <string name="wakeTimeButton">Set Time</string>
    <string name="wakeTimeTxt">Wake Up Time:</string>
    <string name="setPrefButton">Set Preferences</string>

    <!-- times -->
    <string name="time_12am">12:00 am</string>
    <string name="time_1230am">12:30 am</string>
    <string name="time_1am">1:00 am</string>
    <string name="time_130am">1:30 am</string>
    <string name="time_2am">2:00 am</string>
    <string name="time_230am">2:30 am</string>
    <string name="time_3am">3:00 am</string>
    <string name="time_330am">3:30 am</string>
    <string name="time_4am">4:00 am</string>
    <string name="time_430am">4:30 am</string>
    <string name="time_5am">5:00 am</string>
    <string name="time_530am">5:30 am</string>
    <string name="time_6am">6:00 am</string>
    <string name="time_630am">6:30 am</string>
    <string name="time_7am">7:00 am</string>
    <string name="time_730am">7:30 am</string>
    <string name="time_8am">8:00 am</string>
    <string name="time_830am">8:30 am</string>
    <string name="time_9am">9:00 am</string>
    <string name="time_930am">9:30 am</string>
    <string name="time_10am">10:00 am</string>
    <string name="time_1030am">10:30 am</string>
    <string name="time_11am">11:00 am</string>
    <string name="time_1130am">11:30 am</string>
    <string name="time_12pm">12:00 pm</string>
    <string name="time_1230pm">12:30 pm</string>
    <string name="time_1pm">1:00 pm</string>
    <string name="time_130pm">1:30 pm</string>
    <string name="time_2pm">2:00 pm</string>
    <string name="time_230pm">2:30 pm</string>
    <string name="time_3pm">3:00 pm</string>
    <string name="time_330pm">3:30 pm</string>
    <string name="time_4pm">4:00 pm</string>
    <string name="time_430pm">4:30 pm</string>
    <string name="time_5pm">5:00 pm</string>
    <string name="time_530pm">5:30 pm</string>
    <string name="time_6pm">6:00 pm</string>
    <string name="time_630pm">6:30 pm</string>
    <string name="time_7pm">7:00 pm</string>
    <string name="time_730pm">7:30 pm</string>
    <string name="time_8pm">8:00 pm</string>
    <string name="time_830pm">8:30 pm</string>
    <string name="time_9pm">9:00 pm</string>
    <string name="time_930pm">9:30 pm</string>
    <string name="time_10pm">10:00 pm</string>
    <string name="time_1030pm">10:30 pm</string>
    <string name="time_11pm">11:00 pm</string>
    <string name="time_1130pm">11:30 pm</string>

</resources>
