<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="yse.studyin.AddEventActivity">

    <TextView
        android:text="@string/dueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/courseName"
        android:ems="10"
        android:layout_marginStart="11dp"
        android:id="@+id/editText"
        android:labelFor="@+id/editText"
        android:background="@color/buttons"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/titleInput"
        android:ems="10"
        android:id="@+id/editText2"
        android:labelFor="@+id/editText2"
        android:background="@color/buttons"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:text="@string/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText4"
        android:labelFor="@+id/editText4"
        android:background="@color/buttons"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignStart="@+id/editText2" />

    <TextView
        android:text="@string/numHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_marginTop="23dp" />

    <TextView
        android:text="@string/timeDue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <Button
        android:text="@string/dateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:background="@color/buttons"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignStart="@+id/editText4"
        android:layout_alignEnd="@+id/editText4" />

    <Button
        android:text="@string/timeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:background="@color/buttons"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignStart="@+id/button4"
        android:layout_alignEnd="@+id/button4" />

    <Button
        android:text="@string/addEventButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/button6"
        android:layout_marginTop="47dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="54dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
