<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="yse.studyin.PreferencesActivity">

    <TextView
        android:text="@string/wakeTimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:id="@+id/textView4"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/bedtimeButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/buttons"
        android:id="@+id/button8"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/button7"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/wakeTimeButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/buttons"
        android:id="@+id/button7"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/bedtimeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="211dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/textView4" />

    <Button
        android:text="@string/setPrefButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:id="@+id/button9"
        android:background="@color/buttons"/>

</RelativeLayout>
