<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="yse.studyin.MainActivity">

    <Button
        android:text="@string/resourcesButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_marginTop="27dp"
        android:id="@+id/button2"
        android:background="@color/buttons"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logoPNG" />

    <Button
        android:text="@string/calendarButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/button"
        android:background="@color/buttons"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/aboutButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/buttons"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:id="@+id/button3"
        tools:text="About" />

</RelativeLayout>

